--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@invertase/react-native-apple-authentication": "^2.1.5",
     "@react-native-async-storage/async-storage": "^1.17.0",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/core": "^6.1.1",
+    "@react-navigation/drawer": "^6.3.3",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
     "axios": "^0.26.1",
@@ -27,8 +29,11 @@
     "react-native-gesture-handler": "^2.3.2",
     "react-native-haptic-feedback": "^1.13.1",
     "react-native-localization": "^2.3.1",
+    "react-native-paper": "^4.12.0",
     "react-native-permissions": "^3.3.1",
+    "react-native-reanimated": "^2.5.0",
     "react-native-safe-area-context": "^4.2.4",
+    "react-native-screens": "^3.13.1",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1"
