--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@invertase/react-native-apple-authentication": "^2.1.5",
     "@react-native-async-storage/async-storage": "^1.17.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/core": "^6.1.1",
     "@react-navigation/drawer": "^6.3.3",
     "@react-navigation/native": "^6.0.8",
