--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Ecommerce",
+  "name": "reactnativedemo",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -24,6 +24,7 @@
     "is_js": "^0.9.0",
     "react": "17.0.2",
     "react-native": "0.67.4",
+    "react-native-clear-cache": "^1.1.0",
     "react-native-flash-message": "^0.2.1",
     "react-native-geocoder": "^0.5.0",
     "react-native-geolocation-service": "^5.3.0-beta.4",
