--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "is_js": "^0.9.0",
     "react": "17.0.2",
     "react-native": "0.67.4",
+    "react-native-check-box": "^2.1.7",
     "react-native-clear-cache": "^1.1.0",
     "react-native-flash-message": "^0.2.1",
     "react-native-geocoder": "^0.5.0",
@@ -36,6 +37,7 @@
     "react-native-reanimated": "^2.5.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
+    "react-native-size-matters": "^0.4.0",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1"
